--- a/src/index.html
+++ b/src/index.html
@@ -14,9 +14,9 @@
     <link rel="shortcut icon" href="./4geeks.ico" />
   </head>
   <body>
-    <div class="container-fluid text-center">
+    <div class="center container-fluid text-center">
       <h1 class="mt-5">OMG! you will not believe me but...</h1>
-      <h1 id="the-excuse" class="mt-5">me cai de la parra</h1>
+      <h1 id="the-excuse" class="mt-5">My dog ate my homework</h1>
       <button id="boton">Click for new Excuse</button>
     </div>
     <script type="text/javascript" src="public/main.bundle.js"></script>
